# android_vendor_qcom_opensource_pal

./: Android.mk  Makefile.am  Pal.cpp  PalApi.h  PalCommon.h  PalDefs.h  Qal.cpp  QalApi.h  QalAudioRoute.h  QalCommon.h  QalDefs.h  configure.ac  qal.pc.in
adie_rtc/: Android.mk  Makefile.am  adie_rtc.pc.in  configure.ac
adie_rtc/inc/: adie_rtc.h
adie_rtc/src/: adie_rtc.c
adie_rtc/test/src/: adie_rtc_test.c
configs/bengal/: resourcemanager.xml  resourcemanager_scubaidp.xml  resourcemanager_scubaqrd.xml  usecaseKvManager.xml
configs/kona/: resourcemanager.xml  resourcemanager_qrd.xml
configs/lahaina/: resourcemanager.xml  resourcemanager_cdp.xml  resourcemanager_lahaina_mtp.xml  resourcemanager_qrd.xml
configs/monaco/: resourcemanager.xml  resourcemanager_amic.xml  resourcemanager_slate.xml  resourcemanager_slate_amic.xml  resourcemanager_slate_wsa.xml  resourcemanager_wsa.xml  usecaseKvManager.xml
configs/msmnile/: resourcemanager.xml
configs/parrot/: resourcemanager_parrot_idp.xml  resourcemanager_parrot_idp_sku1.xml  resourcemanager_parrot_qrd.xml  resourcemanager_parrot_qrd_sku1.xml  resourcemanager_upd.xml
configs/taro/: resourcemanager.xml  resourcemanager_cdp.xml  resourcemanager_cdp_wcd.xml  resourcemanager_diwali_idp.xml  resourcemanager_diwali_idp_sku1.xml  resourcemanager_diwali_parrot_qrd.xml  resourcemanager_diwali_qrd.xml  resourcemanager_diwali_qrd_sku1.xml  resourcemanager_qrd.xml  resourcemanager_upd.xml  resourcemanager_waipio_cdp.xml  resourcemanager_waipio_mtp.xml  resourcemanager_waipio_qrd.xml  usecaseKvManager.xml
context_manager/inc/: ContextManager.h
context_manager/src/: ContextManager.cpp
device/inc/: Bluetooth.h  CodecDevice.h  CodecDeviceAlsa.h  CodecDeviceGsl.h  CodecDeviceImpl.h  Device.h  DeviceAlsa.h  DeviceGsl.h  DeviceImpl.h  DisplayPort.h  Handset.h  HandsetMic.h  HandsetVaMic.h  Headphone.h  HeadsetMic.h  HeadsetVaMic.h  RTProxy.h  Speaker.h  SpeakerMic.h  SpeakerProtection.h  TriMic.h  USBAudio.h
device/src/: Bluetooth.cpp  CodecDevice.cpp  CodecDeviceAlsa.cpp  CodecDeviceGsl.cpp  Device.cpp  DeviceAlsa.cpp  DeviceGsl.cpp  DisplayPort.cpp  Handset.cpp  HandsetMic.cpp  HandsetVaMic.cpp  Headphone.cpp  HeadsetMic.cpp  HeadsetVaMic.cpp  RTProxy.cpp  Speaker.cpp  SpeakerMic.cpp  SpeakerProtection.cpp  TriMic.cpp  USBAudio.cpp
ipc/HwBinders/: Android.mk
ipc/HwBinders/interfaces/pal/: current.txt
ipc/HwBinders/interfaces/pal/1.0/: Android.bp  IPAL.hal  IPALCallback.hal  types.hal
ipc/HwBinders/pal_ipc_client/: Android.mk
ipc/HwBinders/pal_ipc_client/inc/: PalCallback.h
ipc/HwBinders/pal_ipc_client/src/: pal_client_wrapper.cpp
ipc/HwBinders/pal_ipc_server/: Android.mk
ipc/HwBinders/pal_ipc_server/inc/: pal_server_wrapper.h
ipc/HwBinders/pal_ipc_server/src/: pal_server_wrapper.cpp
mcs/: Makefile.am  configure.ac  mcs.pc.in
mcs/inc/: mcs.h  qts.h
mcs/src/: mcs.c
mcs/test/src/: mcs-test.c
plugins/codecs/: Android.mk  bt_aptx.c  bt_aptx.h  bt_base.c  bt_base.h  bt_ble.c  bt_ble.h  bt_bundle.c  bt_bundle.h  bt_intf.h
resource_manager/inc/: ResourceManager.h  SndCardMonitor.h
resource_manager/src/: ResourceManager.cpp  SndCardMonitor.cpp
session/inc/: ACDEngine.h  ContextDetectionEngine.h  PayloadBuilder.h  Session.h  SessionAgm.h  SessionAlsaCompress.h  SessionAlsaPcm.h  SessionAlsaUtils.h  SessionAlsaVoice.h  SessionAts.h  SessionGsl.h  SessionQts.h  SoundTriggerEngine.h  SoundTriggerEngineCapi.h  SoundTriggerEngineCapiCnn.h  SoundTriggerEngineCapiVop.h  SoundTriggerEngineGsl.h  kvh2xml.h
session/src/: ACDEngine.cpp  ContextDetectionEngine.cpp  PayloadBuilder.cpp  Session.cpp  SessionAgm.cpp  SessionAlsaCompress.cpp  SessionAlsaPcm.cpp  SessionAlsaUtils.cpp  SessionAlsaVoice.cpp  SessionAts.cpp  SessionGsl.cpp  SessionQts.cpp  SoundTriggerEngine.cpp  SoundTriggerEngineCapi.cpp  SoundTriggerEngineCapiCnn.cpp  SoundTriggerEngineCapiVop.cpp  SoundTriggerEngineGsl.cpp
stream/inc/: Stream.h  StreamACD.h  StreamCommon.h  StreamCompress.h  StreamInCall.h  StreamPCM.h  StreamSensorPCMData.h  StreamSoundTrigger.h  StreamUltraSound.h
stream/src/: Stream.cpp  StreamACD.cpp  StreamCommon.cpp  StreamCompress.cpp  StreamContextProxy.cpp  StreamInCall.cpp  StreamNonTunnel.cpp  StreamPCM.cpp  StreamSensorPCMData.cpp  StreamSoundTrigger.cpp  StreamUltraSound.cpp
test/: PalUsecaseTest.c
utils/inc/: ACDPlatformInfo.h  PalRingBuffer.h  QalRingBuffer.h  SignalHandler.h  SoundTriggerPlatformInfo.h  SoundTriggerUtils.h  SoundTriggerXmlParser.h
utils/src/: ACDPlatformInfo.cpp  PalRingBuffer.cpp  QalRingBuffer.cpp  SignalHandler.cpp  SoundTriggerPlatformInfo.cpp  SoundTriggerUtils.cpp  SoundTriggerXmlParser.cpp
